--- a/imports/ui/components/led/led.html
+++ b/imports/ui/components/led/led.html
@@ -1,5 +1,4 @@
-<login-buttons></login-buttons>
-<h1>House lights: <input ng-model ="collapse" type = checkbox></h1>
+<h1>House lights: <input ng-model="collapse" type="checkbox" checked></h1>
 <div ng-show="collapse">
 <ul ng-show="led.currentUser()">
   <li ng-repeat="led in led.leds">
@@ -7,4 +6,7 @@
     <led-indicator led="led"></led-indicator>
   </li>
 </ul>
+</div>
+<div>
+	<tracks></tracks>
 </div>
