--- a/imports/ui/components/led/led.html
+++ b/imports/ui/components/led/led.html
@@ -1,4 +1,4 @@
-<h1>House lights: <input ng-model="collapse" type="checkbox" checked></h1>
+<h1>House lights: <input ng-model="collapse" type="checkbox"></h1>
 <div ng-show="collapse">
 <ul ng-show="led.currentUser()">
   <li ng-repeat="led in led.leds">
@@ -8,5 +8,5 @@
 </ul>
 </div>
 <div>
-	<tracks></tracks>
+<tracks></tracks>
 </div>
